// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Email /> should render with error in props 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Email
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error=""
        label="Email address"
        onBlur={[Function]}
        onChange={[Function]}
        value="foo@example.com"
      />
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <Col
            bsClass="col"
            componentClass="div"
            md={12}
            xs={24}
          >
            <SaveButton
              pullRight={true}
            />
          </Col>
        </Row>
      </div>
    </form>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<Email /> should render with error in state 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Email
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error="Foo error"
        label="Email address"
        onBlur={[Function]}
        onChange={[Function]}
        value="foo@example.com"
      />
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <Col
            bsClass="col"
            componentClass="div"
            md={12}
            xs={24}
          >
            <SaveButton
              pullRight={true}
            />
          </Col>
        </Row>
      </div>
    </form>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<Email /> should render with initial email 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Email
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error=""
        label="Email address"
        onBlur={[Function]}
        onChange={[Function]}
        value="foo@example.com"
      />
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <Col
            bsClass="col"
            componentClass="div"
            md={12}
            xs={24}
          >
            <SaveButton
              pullRight={true}
            />
          </Col>
        </Row>
      </div>
    </form>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<Email /> should render without initial email 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Email
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error=""
        label="Email address"
        onBlur={[Function]}
        onChange={[Function]}
        value=""
      />
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <Col
            bsClass="col"
            componentClass="div"
            md={12}
            xs={24}
          >
            <SaveButton
              pullRight={true}
            />
          </Col>
        </Row>
      </div>
    </form>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;
